@@ -1,3 +1,11 @@
+2008-11-28  Seiji Zenitani  <zenitani@mac.com>
+
+	* frame.c (x_set_alpha) [NS_IMPL_COCOA]: Call x_set_frame_alpha.
+
+	* nsfns.m (ns_frame_parm_handlers): Set alpha handler.
+
+	* nsterm.m (x_set_frame_alpha): New function.
+
 2008-11-27  Eli Zaretskii  <eliz@gnu.org>
 
 	* xfaces.c (Fx_font_family_list, syms_of_xfaces): Fix last change.
